--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,36 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
-	font-family: 'IBM Plex Sans Thai Looped', sans-serif;
+	font-family: 'IBM Plex Sans Thai Looped', ui-sans-serif, system-ui, -apple-system,
+		BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', sans-serif;
 	line-height: 1.5;
+}
+
+.f {
+	display: flex;
+	align-items: center;
+}
+
+.jcc {
+	justify-content: center;
+}
+
+[type='button'],
+[type='reset'],
+[type='submit'],
+button {
+	background: unset;
+	padding: 0;
+	border: none;
+
+	color: inherit;
+	font-family: inherit;
+	font-size: inherit;
+	font-weight: inherit;
+	line-height: inherit;
+
+	cursor: pointer;
 }
