feat: add school append fn, province school

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,10 @@ html {
 	}
 }
 
+* {
+	overscroll-behavior: none;
+}
+
 body {
 	font-family: 'IBM Plex Sans Thai Looped', ui-sans-serif, system-ui, -apple-system,
 		BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
