feat: add lottie + sponsors in index

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@ body {
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', sans-serif;
 	line-height: 1.5;
 	background: #ecf7f7;
+	overflow: hidden scroll;
 }
 
 .f {
