--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,7 +23,7 @@ body {
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', sans-serif;
 	line-height: 1.5;
 	background: #ecf7f7;
-	overflow: hidden scroll;
+	overflow: hidden auto;
 }
 
 .f {
@@ -47,4 +47,16 @@ button {
 	line-height: inherit;
 
 	cursor: pointer;
+}
+
+.sr-only {
+	position: absolute !important;
+	width: 1px !important;
+	height: 1px !important;
+	padding: 0 !important;
+	margin: -1px !important;
+	overflow: hidden !important;
+	clip: rect(0, 0, 0, 0) !important;
+	white-space: nowrap !important;
+	border: 0 !important;
 }
