fix: modal should properly lock scroll now

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,3 +64,15 @@ button {
 .nobr {
 	white-space: nowrap;
 }
+
+html[style*='overflow'] {
+	position: fixed;
+	overflow: initial !important;
+	overflow-y: scroll !important;
+	width: 100%;
+	padding-right: 0 !important;
+
+	> body {
+		overflow-y: hidden;
+	}
+}
